--- a/example-consumer/pom.xml
+++ b/example-consumer/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.hqing</groupId>
-            <artifactId>hqing-rpc-basic</artifactId>
+            <artifactId>hqing-rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
