--- a/hqing-rpc-core/pom.xml
+++ b/hqing-rpc-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hqing</groupId>
-    <artifactId>hqing-rpc-basic</artifactId>
+    <artifactId>hqing-rpc-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
