--- a/hqing-rpc-core/pom.xml
+++ b/hqing-rpc-core/pom.xml
@@ -51,6 +51,13 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <!--hutool-yaml-->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
