修改服务本地调用逻辑,修复服务提供者之间不能相互注入的问题

--- a/example-consumer/src/main/resources/application.yml
+++ b/example-consumer/src/main/resources/application.yml
@@ -1,6 +1,3 @@
 rpc:
-  registry:
-    # 注册中心地址
-    address: http://localhost:2379
-    # 注册中心调用超时时间
-    timeout: 5000
+  protocol:
+    port: 20666
