--- a/hqing-rpc-examples/example-ticket-service-springboot/pom.xml
+++ b/hqing-rpc-examples/example-ticket-service-springboot/pom.xml
@@ -32,7 +32,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!--rpc-core-->
+        <!--rpc-starter-->
         <dependency>
             <groupId>com.hqing</groupId>
             <artifactId>hqing-rpc-spring-boot-starter</artifactId>
